@@ -10,6 +10,7 @@ glibc (2.22-0experimental2) UNRELEASED; urgency=medium
     has been fixed upstream.
   * debian/patches/any/local-no-SOCK_NONBLOCK.diff: drop, both GNU/Hurd
     and GNU/kFreeBSD now support SOCK_NONBLOCK.
+  * debian/patches/any/local-libgcc-compat-ports.diff: refresh.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Dec 2015 23:41:13 +0100
 
